# analytics-digest-helper

./: .env.example  .gitignore  README.md  dune_data.pkl  dune_testing.ipynb  june12_reference.txt  main.py  pyproject.toml  stEthOnL2Bridges.csv
.github/: CODEOWNERS
.github/workflows/: build.yaml
dune/: loader.py  process.py  queries.py
examples/: june05.txt  may29.txt
graphing/: graph.py
llm/: blocks.py  prompts.py  writer.py
threads/2023-07-16 00:00:00/: thread.md
threads/2023-07-30 00:00:00/: thread.md
threads/2023-08-06 00:00:00/: thread.md
utils/: cex_data_loader.py  data_transformer.py
