[tool.poetry]
name = "analytics-digest-helper"
version = "0.1.0"
description = ""
authors = ["skhomuti <skhomuti@gmail.com>"]
readme = "README.md"
packages = [{include = "analytics_digest_helper"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.8"
langchain = "^0.0.205"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
