[tool.poetry]
name = "analytics-digest-helper"
version = "0.1.0"
description = ""
authors = ["skhomuti <skhomuti@gmail.com>", "Patrick Blais <pwblais@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.8"
langchain = "^0.0.249"
dune-client = "^1.1.1"
python-dotenv = "^1.0.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
argparse = "^1.4.0"
google-api-python-client = "^2.95.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
